--- a/src/peek_data/config/resources/data-stream-interface.yaml.template
+++ b/src/peek_data/config/resources/data-stream-interface.yaml.template
@@ -1,6 +1,6 @@
 {data-stream-interface-name}
   input-channel: # kafka/fileio/stdio
-  type: # EVENT/EVENTS-CHUNK/REDUCTION-RESULT, this field decide which handler it will use.
+  type: # EVENT/EVENTS-CHUNK/REDUCTION-RESULT, this field decide which handler to be used.
   output-channel: # kafka/fileio/stdio
   max-wait: 1 # [s], default 1
-  chuck-size: 8
+  chunk-size: 8
