--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,8 @@ envlist = py39
 isolated_build = true
 
 [testenv]
+setenv =
+  PYTHONPATH = {toxinidir}{/}src
 
 [testenv:deps]
 description = Update dependencies by running pip-compile-multi
@@ -11,6 +13,14 @@ skip_install = true
 deps = pip-compile-multi
 changedir = requirements
 commands = pip-compile-multi -d .
+
+[testenv:config-build]
+description = Build new default configuration yaml file
+deps = -r requirements/base.txt
+skip_install = true
+changedir = src/peek_data/config/resources
+allowlist_externals = python
+commands = python -m peek_data.config.dump
 
 [testenv:static]
 description = Code formatting and static analysis
