--- a/src/peek_data/config/resources/config.yaml.template
+++ b/src/peek_data/config/resources/config.yaml.template
@@ -2,23 +2,17 @@
 # Copyright (c) 2023 Scipp contributors (https://github.com/scipp)
 # @author Sunyoung Yoo
 #
-# Depenencies on other templates:
-#   data-stream-interface.yaml.template
-#   data-stream-mapping.yaml.template
-#   data-reduction-target.yaml.template
-#   data-reduction-workflow.yaml.template
-#   data-reduction-mapping.yaml.template
+# Dependencies on other templates:
 
 general:
   user:
   name:
   last-updated:
-  root-dir: # default "~/.peek-data/"
-  log-dir: # default "{root-dir}/log/"
-  
+  root-dir: "~/.peek-data/"
+  log-dir: "~/.peek-data/log/"
 
 dashboard:
-  update-frequency: # default 5[Hz]
+  update-frequency: 5 # [Hz]
   css:
   display-targets:
     - index:
@@ -36,11 +30,10 @@ data-stream:
     #   to: interface-name-1
     # - from: interface-name-2
     #   to: interface-name-3,interface-name-4
-  custom-handler-dir: # default "{root-dir}/custom-handlers/" 
-                      # Only if you're using custom handlers.
+  custom-handler-dir: "~/.peek-data/custom-handlers/"
 
-data-reduction: # Each workflow will be run asynchronously but in one process. 
-                # Can be split into multi-processes by the data-reduction-manager process if needed.
+data-reduction: # Each workflow will be run asynchronously but in one process.
+                # Can be split into multi-processes by the data-reduction-manager instance if needed.
   input-interface: #interface-name-1
   workflow-target-mapping:
     - workflow: # workflow-name-1
