--- a/src/peek_data/config/resources/data-stream-interface.yaml.template
+++ b/src/peek_data/config/resources/data-stream-interface.yaml.template
@@ -1,7 +1,11 @@
-{data-stream-interface-name}
-  input-channel: # kafka/fileio/stdio
+$name:
   type: # EVENT/EVENTS-CHUNK/REDUCTION-RESULT/CUSTOM, this field decide which handler to be used.
+  input-channel:
+    type: # kafka/internal/fileio
+    config:
+  output-channel:
+    type: # kafka/internal/fileio
+    config:
   data-handler: # If the interface type is `CUSTOM`, write a lambda function or name of the handler function or class.
-  output-channel: # kafka/fileio/stdio
   max-wait: 1 # [s], default 1
   chunk-size: 8
