--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,4 +44,4 @@ skip = "./.git,./.tox,*/*_cache"
 skip_gitignore = true
 line_length = 88
 multi_line_output = 2  # for compatibility with yapf
-skip_glob = ["src/peek_data/config/__init__.py"]
+use_parentheses = true
