--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,12 @@
 [tox]
-envlist = py39
+envlist = py{39,310,311}
 isolated_build = true
 
 [testenv]
+deps = -r requirements/base.txt
 setenv =
   PYTHONPATH = {toxinidir}{/}src
+commands = python -m pytest --cov=peek_data --cov-report html:coverage_html/python
 
 [testenv:deps]
 description = Update dependencies by running pip-compile-multi
@@ -16,9 +18,8 @@ commands = pip-compile-multi -d .
 
 [testenv:config-build]
 description = Build new default configuration yaml file
-deps = -r requirements/base.txt
 skip_install = true
-changedir = src/peek_data/config/resources
+changedir = src/peek_data/resources
 allowlist_externals = python
 commands = python -m peek_data.config.dump
 
