Diagram generating environment in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,14 @@ deps = pip-compile-multi
 changedir = requirements
 commands = pip-compile-multi -d .
 
+[testenv:docs]
+deps = -r requirements/docs.txt
+description = Build diagram and documentation
+skip_install = true
+allowlist_externals = python
+changedir = docs
+commands = python diagram.py
+
 [testenv:config-build]
 description = Build new default configuration yaml file
 skip_install = true
