--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py{39,310,311}
 isolated_build = true
 
 [testenv]
-deps = -r requirements/base.txt
+deps = -r requirements/test.txt
 setenv =
   PYTHONPATH = {toxinidir}{/}src
 commands = python -m pytest --cov=peek_data --cov-report html:coverage_html/python
