Remove skip_install option

--- a/tox.ini
+++ b/tox.ini
@@ -44,18 +44,13 @@ commands =
 
 [testenv:config-build]
 description = Build new default configuration yaml file
-<<<<<<< HEAD
-=======
-skip_install = true
->>>>>>> 908e8cd (Reorganize function calls and modules)
 changedir = src/peek_data/resources
 allowlist_externals = python
-commands = python -m peek_data.config.dump
+commands = python -m peek_data.config.dump --directory {toxinidir}/src/peek_data/resources/ --name test.yaml
 
 [testenv:static]
 description = Code formatting and static analysis
 basepython = python3.9
-skip_install = true
 deps = -r requirements/static.txt
 allowlist_externals = sh
 # The first run of pre-commit may reformat files. If this happens, it returns 1 but this
