--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ isolated_build = true
 
 [testenv]
 deps = -r requirements/test.txt
-commands = python -m pytest --cov=peek_data --cov-report html:coverage_html/python
+commands = python -m pytest --cov=beamlime --cov-report html:coverage_html/python
 
 [testenv:deps]
 description = Update dependencies by running pip-compile-multi
@@ -16,9 +16,9 @@ commands = pip-compile-multi -d .
 
 [testenv:config-build]
 description = Build new default configuration yaml file
-changedir = src/peek_data/resources
+changedir = src/beamlime/resources
 allowlist_externals = python
-commands = python -m peek_data.config.dump --directory {toxinidir}/src/peek_data/resources/ --name test.yaml
+commands = python -m beamlime.config.dump --directory {toxinidir}/src/beamlime/resources/ --name test.yaml
 
 [testenv:static]
 description = Code formatting and static analysis
