Move dump methods into exporters and separate main function to  executables

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ commands = pip-compile-multi -d .
 description = Build new default configuration yaml file
 changedir = src/beamlime/resources
 allowlist_externals = python
-commands = python -m beamlime.config.dump --directory {toxinidir}/src/beamlime/resources/ --name test.yaml
+commands = python -m beamlime.executables.export_default_config --directory {toxinidir}/src/beamlime/resources/ --name default-setting.yaml --overwrite
 
 [testenv:static]
 description = Code formatting and static analysis
