--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,9 @@ commands =
 description = Build new default configuration yaml file
 changedir = src/beamlime/resources
 allowlist_externals = python
-commands = python -m beamlime.executables.export_default_config --directory {toxinidir}/src/beamlime/resources/ --name default-setting.yaml --overwrite
+commands =
+    - python -m beamlime.executables.export_default_config --directory {toxinidir}/src/beamlime/resources/generated/ --overwrite
+    - python -m beamlime.executables.export_sample_workflow_config --directory {toxinidir}/src/beamlime/resources/generated/ --overwrite
 
 [testenv:static]
 description = Code formatting and static analysis
