--- a/src/beamlime/resources/templates/data-stream-interface.yaml
+++ b/src/beamlime/resources/templates/data-stream-interface.yaml
@@ -1,3 +1,7 @@
+# SPDX-License-Identifier: BSD-3-Clause
+# Copyright (c) 2023 Scipp contributors (https://github.com/scipp)
+# Single interface configuration template
+
 name:
 data-handler: DATAREDUCTION
 input-channel: QUEUE
