Add document build option that draws diagram manually

--- a/tox.ini
+++ b/tox.ini
@@ -18,8 +18,12 @@ commands = pip-compile-multi -d .
 
 [testenv:docs]
 deps = -r requirements/docs.txt
-description = Build diagram and documentation
-skip_install = true
+description = Build documentation
+changedir = docs
+
+[testenv:docs-manual]
+deps = -r requirements/docs.txt
+description = Build diagram manually
 allowlist_externals = python
 changedir = docs
 commands = python diagram.py
