Seperate auto-document build and manual-document build environments

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ description = Build documentation
 changedir = docs
 
 [testenv:docs-manual]
-deps = -r requirements/docs.txt
+deps = -r requirements/docs-manual.txt
 description = Build diagram manually
 allowlist_externals = python
 changedir = docs
