Diagram generate script update

--- a/tox.ini
+++ b/tox.ini
@@ -23,8 +23,8 @@ changedir = docs
 deps = -r requirements/docs-manual.txt
 description = Build diagram manually
 allowlist_externals = python
-changedir = docs
-commands = python diagram.py
+changedir = docs/resources
+commands = python {toxinidir}/docs/diagram.py
 
 [testenv:config-build]
 description = Build new default configuration yaml file
