Document static pages build skeleton

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,11 @@ commands = pip-compile-multi -d .
 [testenv:docs]
 deps = -r requirements/docs.txt
 description = Build documentation
-changedir = docs
+allowlist_externals = find
+commands =
+  python -m sphinx -v -b html -d doctrees docs html
+  python -m sphinx -v -b doctest -d doctrees docs html
+  find html -type f -name "*.ipynb" -not -path "html/_sources/*" -delete
 
 [testenv:docs-manual]
 deps = -r requirements/docs-manual.txt
@@ -25,6 +29,22 @@ description = Build diagram manually
 allowlist_externals = python
 changedir = docs/resources
 commands = python {toxinidir}/docs/diagram.py
+
+[testenv:docs-clean]
+description = Clean all the existing built objects and build them from scratch
+deps = -r requirements/docs.txt
+allowlist_externals = find
+setenv =
+  {[testenv]setenv}
+  # Search directory for confuse for custom config enabling plopp plotting
+  SCIPPDIR={toxinidir}{/}docs{/}buildconfig
+commands =
+  find {toxinidir}/doctrees ! -name doctrees -delete
+  find {toxinidir}/html ! -name html -delete
+  find {toxinidir}/docs/generated ! -name generated -delete
+  python -m sphinx -v -b html -d doctrees docs html -E
+  python -m sphinx -v -b doctest -d doctrees docs html -E
+  find html -type f -name "*.ipynb" -not -path "html/_sources/*" -delete
 
 [testenv:config-build]
 description = Build new default configuration yaml file
