Add diagram drawing command

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ deps = -r requirements/docs-manual.txt
 description = Build diagram manually
 allowlist_externals = python
 changedir = docs/resources
-commands = python {toxinidir}/docs/diagram.py
+commands = python {toxinidir}/docs/resources/diagram.py
 
 [testenv:docs-clean]
 description = Clean all the existing built objects and build them from scratch
