Changing directory causes manim that can't find the font

--- a/tox.ini
+++ b/tox.ini
@@ -27,8 +27,9 @@ commands =
 deps = -r requirements/docs-manual.txt
 description = Build diagram manually
 allowlist_externals = python
-changedir = docs/resources
-commands = python {toxinidir}/docs/resources/diagram.py
+commands =
+  - python {toxinidir}/docs/resources/diagram.py
+  - manim -ql docs/resources/draw_logo.py CreateLogo -s
 
 [testenv:docs-clean]
 description = Clean all the existing built objects and build them from scratch
