--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
 ]
 requires-python = ">=3.8"
+version = "23.03.0dev0"
 dynamic = ["version"]
 dependencies = ["pyyaml"]
 [project.urls]
