--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,3 @@
-# SPDX-License-Identifier: BSD-3-Clause
-# Copyright (c) 2023 Scipp contributors (https://github.com/scipp)
-
 name: Release
 
 on:
@@ -8,39 +5,50 @@ on:
     types: [published]
   workflow_dispatch:
 
+defaults:
+  run:
+    shell: bash -l {0}  # required for conda env
+
 jobs:
   build_wheels:
-    name: Wheels
-    runs-on: ubuntu-20.04
+    name: Wheels on ${{ matrix.os }}-${{ matrix.build }}
+    needs: check_release
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-20.04]
+        build: [cp39]
 
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # history required so setuptools_scm can determine version
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+        fetch-depth: 0  # history required so cmake can determine version
 
-      - uses: actions/setup-python@v3
-        with:
-          python-version: 3.8
+    - uses: pypa/cibuildwheel@v2.12.1
+      env:
+        CIBW_BUILD: ${{ matrix.build }}-*
+        MACOSX_DEPLOYMENT_TARGET: "10.15"
 
-      - run: python -m pip install --upgrade pip
-      - run: python -m pip install -r requirements/wheels.txt
+    - name: Verify clean directory
+      run: git diff --exit-code
+      shell: bash
 
-      - name: Build wheels
-        run: python -m build
+    - name: Upload wheels
+      uses: actions/upload-artifact@v2
+      with:
+        name: dist
+        path: wheelhouse/*.whl
 
-      - name: Upload wheels
-        uses: actions/upload-artifact@v2
-        with:
-          name: dist
-          path: dist
-
-  upload_packages:
-    name: Deploy packages
+  upload_pypi:
+    name: Deploy PyPI
     needs: [build_wheels]
     runs-on: ubuntu-20.04
     if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
+      - uses: actions/download-artifact@v2
       - uses: actions/setup-python@v3
       - uses: pypa/gh-action-pypi-publish@v1.7.1
         with:
