--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,19 @@ defaults:
     shell: bash -l {0}  # required for conda env
 
 jobs:
+  check_release:
+    name: Check if package can be released
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v3
+        with:
+          python-version: 3.8
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install -r requirements/ci.txt
+      - run: tox -e check-release
+        if: github.event_name == 'release' && github.event.action == 'published'
+
   build_wheels:
     name: Wheels on ${{ matrix.os }}-${{ matrix.build }}
     needs: check_release
