--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: 3.8
       - run: python -m pip install --upgrade pip
       - run: python -m pip install -r requirements/ci.txt
-      - run: tox -e check-release
+      # - run: tox -e check-release
         if: github.event_name == 'release' && github.event.action == 'published'
 
   build_wheels:
