Rename wheel destination directory

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
         fetch-depth: 0  # history required so cmake can determine version
 
     - name: Build wheels
-      run: pip wheel -w DEST_DIR .
+      run: pip wheel -w wheelhouse .
       shell: bash
 
     - name: Verify clean directory
