--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,33 +24,29 @@ jobs:
         if: github.event_name == 'release' && github.event.action == 'published'
 
   build_wheels:
-    name: Wheels on ${{ matrix.os }}-${{ matrix.build }}
-    needs: check_release
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-20.04]
-        build: [cp39]
+    name: Wheels
+    runs-on: ubuntu-20.04
 
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: true
-        fetch-depth: 0  # history required so cmake can determine version
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # history required so setuptools_scm can determine version
 
-    - name: Build wheels
-      run: python -m build
+      - uses: actions/setup-python@v3
+        with:
+          python-version: 3.8
 
-    - name: Verify clean directory
-      run: git diff --exit-code
-      shell: bash
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install -r requirements/wheels.txt
 
-    - name: Upload wheels
-      uses: actions/upload-artifact@v3
-      with:
-        name: dist
-        path: dist
+      - name: Build wheels
+        run: python -m build
+
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: dist
 
   upload_pypi:
     name: Deploy PyPI
