Separate video generating script from image generating script

--- a/tox.ini
+++ b/tox.ini
@@ -26,10 +26,17 @@ commands =
 [testenv:docs-manual]
 deps = -r requirements/docs-manual.txt
 description = Build diagram manually
-allowlist_externals = python
+allowlist_externals =
+    python
+    mv
+    find
 commands =
   - python {toxinidir}/docs/resources/diagram.py
-  - manim -ql docs/resources/draw_logo.py CreateLogo -s
+  - manim -qh -t docs/resources/draw_logo.py CreateLogoImage -s --media_dir docs/resources/manim/ -o logo.png -r 1024,512
+  - mv docs/resources/manim/images/draw_logo/logo.png docs/resources/logo.png
+  - manim -qh docs/resources/draw_logo.py CreateLogoVideo --media_dir docs/resources/manim/ -o logo
+  - mv docs/resources/manim/videos/draw_logo/1080p60/logo.mp4 docs/resources/
+  - find docs/resources/manim -delete
 
 [testenv:docs-clean]
 description = Clean all the existing built objects and build them from scratch
