Add logo drawing script

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,8 @@ commands =
   - python {toxinidir}/docs/resources/diagram.py
   - manim -qh -t docs/resources/draw_logo.py CreateLogoImage -s --media_dir docs/resources/manim/ -o logo.png -r 1024,512
   - mv docs/resources/manim/images/draw_logo/logo.png docs/resources/logo.png
+  - manim -qh -t docs/resources/draw_logo.py CreateIconImage -s --media_dir docs/resources/manim/ -o icon.png -r 256,256
+  - mv docs/resources/manim/images/draw_logo/icon.png docs/resources/icon.png
   - manim -qh docs/resources/draw_logo.py CreateLogoVideo --media_dir docs/resources/manim/ -o logo
   - mv docs/resources/manim/videos/draw_logo/1080p60/logo.mp4 docs/resources/
   - find docs/resources/manim -delete
