--- a/src/beamlime/resources/templates/config.yaml
+++ b/src/beamlime/resources/templates/config.yaml
@@ -2,10 +2,10 @@
 # Copyright (c) 2023 Scipp contributors (https://github.com/scipp)
 # @author Sunyoung Yoo
 #
-# Dependencies on other templates: data-stream-interface.yaml,
+# Dependencies on other templates: data-stream-application.yaml,
 #                                  data-stream-mapping.yaml,
-#                                  target.yaml,
 #                                  workflow.yaml
+#                                  target.yaml
 
 general:
   user:
@@ -18,6 +18,7 @@ dashboard:
   update-frequency: 5 # [Hz]
 
 data-stream:
+  custom-handler-dir: "~/.beamlime/custom-handlers/"
   applications: # Each application will be run in different process if possible.
     # - name: application-name-1
     #   ...
@@ -25,12 +26,17 @@ data-stream:
     #   ...
     # - name: application-name-3
     #   ...
-  application-mapping: # Define communication between interfaces here.
+  application-mapping: # Define communication between applications here.
     # - from: application-name-1
     #   to:
     #       - application-name-2
     #       - application-name-3
-  custom-handler-dir: "~/.beamlime/custom-handlers/"
+  application-specs:  # Specs for each applications. It will be passed into the constructor of the handler.
+    # application-name-1:
+    #  ...
+    # applicatoin-name-2:
+    #  ...
+
 
 data-reduction: # Each workflow will be run asynchronously but in one process.
                 # Can be split into multi-processes by the data-reduction-manager instance if needed.
