--- a/src/beamlime/resources/templates/data-stream-application.yaml
+++ b/src/beamlime/resources/templates/data-stream-application.yaml
@@ -1,9 +1,10 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright (c) 2023 Scipp contributors (https://github.com/scipp)
-# Single interface configuration template
+# Application configuration that is needed by the main controller.
+# All information that is specifically for each application should go into `application-spec`.
 
 name:
-data-handler: DATAREDUCTION
+data-handler: DUMMY
 input-channel: QUEUE
 output-channel: QUEUE
-max-wait: 1 # [s], default 1
+keep-alive: FALSE
