--- a/src/beamlime/resources/templates/workflow.yaml
+++ b/src/beamlime/resources/templates/workflow.yaml
@@ -7,6 +7,9 @@ reference:
 process:
 input-policy: REPLACE # SKIP|STACK|APPEND|REPLACE|AVERAGE
 output-policy: REPLACE # SKIP|STACK|APPEND|REPLACE|AGERAVE
+targets:
+  # - target-name-1
+  # - target-name-2
 process-args:
   # - arg1
   # - arg2
