--- a/src/beamlime/resources/templates/data-stream-application.yaml
+++ b/src/beamlime/resources/templates/data-stream-application.yaml
@@ -4,7 +4,7 @@
 # All information that is specifically for each application should go into `application-spec`.
 
 name:
-data-handler: DUMMY
-input-channel: QUEUE
-output-channel: QUEUE
+data-handler:
+input-channel: beamlime.config.preset_options.CommunicationChannelOptions
+output-channel: beamlime.config.preset_options.CommunicationChannelOptions
 keep-alive: FALSE
