Update virtual environment recipes

--- a/docs/environments/conda/test-env.yaml
+++ b/docs/environments/conda/test-env.yaml
@@ -1,7 +1,14 @@
 name: lime-test
 channels:
   - conda-forge
+  - scipp
 dependencies:
   - python=3.9
   - jupyterlab
   - pyyaml
+  - colorama
+  - graphlib-backport
+  - scipp
+  - ipympl
+pip:
+  - plopp
