--- a/.github/workflows/pr_and_main.yml
+++ b/.github/workflows/pr_and_main.yml
@@ -53,7 +53,7 @@ jobs:
         uses: mamba-org/provision-with-micromamba@main
         with:
           micromamba-version: 1.0.0
-          environment-file: .docs/environments/conda/${{ matrix.variant.build-config }}.yml
+          environment-file: docs/environments/conda/${{ matrix.variant.build-config }}.yml
           cache-env: true
           extra-specs: |
             python=${{ matrix.python-version }}
