--- a/.github/workflows/pr_and_main.yml
+++ b/.github/workflows/pr_and_main.yml
@@ -41,9 +41,9 @@ jobs:
       matrix:
         variant:
         - {os: ubuntu-20.04, build-config: dev-env}
-        - {os: macos-11, build-config: dev-env}
-        - {os: windows-2019, build-config: dev-env}
-        python-version: ["3.9", "3.10", "3.11"]
+        # - {os: macos-11, build-config: dev-env}
+        # - {os: windows-2019, build-config: dev-env}
+        python-version: ["3.9", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
