--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         - {os: windows-2019, build-config: dev-env}
         python-version: ["3.9", "3.10", "3.11"]
 
-    uses: .github/workflows/pr.yml@tests
+    uses: ./.github/workflows/pr.yml@tests
     with:
       os-variant: ${{ matrix.variant.os }}
       build-config: ${{ matrix.variant.build-config }}
