--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,21 +14,6 @@ concurrency:
   cancel-in-progress: true  # cancel jobs from previous push
 
 jobs:
-  formatting:
-    name: Formatting and static analysis
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-        with:
-          python-version: 3.9
-      - run: python -m pip install --upgrade pip
-      - run: python -m pip install -r requirements/ci.txt
-      - run: tox -e static
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Apply automatic formatting
-
   tests:
     # needs: formatting
     strategy:
@@ -40,7 +25,7 @@ jobs:
         - {os: windows-2019, build-config: dev-env}
         python-version: ["3.9", "3.10", "3.11"]
 
-    uses: ./.github/workflows/pr.yml@tests
+    uses: ./.github/workflows/pr.yml
     with:
       os-variant: ${{ matrix.variant.os }}
       build-config: ${{ matrix.variant.build-config }}
