--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,18 +8,6 @@ on:
     branches:
       - main
   pull_request:
-  workflow_call:
-    inputs:
-      os-variant:
-        default: 'ubuntu-20.04'
-        type: string
-      build-config:
-        default: 'dev-env'
-        type: string
-      python-version:
-        default: '3.9'
-        type: string
-
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref == 'refs/heads/main' && github.run_number || github.ref }}
@@ -27,41 +15,7 @@ concurrency:
 
 jobs:
   formatting:
-    name: Formatting and static analysis
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-        with:
-          python-version: 3.9
-      - run: python -m pip install --upgrade pip
-      - run: python -m pip install -r requirements/ci.txt
-      - run: tox -e static
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Apply automatic formatting
+    uses: ./.github/workflows/reusables/static.yml
 
   single-test:
-    needs: formatting
-    name: tests ${{ inputs.os-variant }}, py${{ inputs.python-version }}
-    runs-on: ${{ inputs.os-variant }}
-    defaults:
-      run:
-        shell: bash -l {0}
-    strategy:
-      fail-fast: false
-
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: true
-      - name: Setup conda environment
-        uses: mamba-org/provision-with-micromamba@main
-        with:
-          micromamba-version: 1.0.0
-          environment-file: docs/environments/conda/${{ inputs.build-config }}.yaml
-          cache-env: true
-          extra-specs: |
-            python=${{ inputs.python-version }}
-
-      - run: tox -e test
+    uses: ./.github/workflows/reusables/test.yml
