--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -15,7 +15,9 @@ on:
       python-version:
         default: '3.9'
         type: string
-
+      coverage-report:
+        default: false
+        type: bool
 
 jobs:
   test:
@@ -41,3 +43,9 @@ jobs:
             python=${{ inputs.python-version }}
 
       - run: tox -e test
+
+      - uses: actions/upload-artifact@v2
+        if: ${{ inputs.coverage-report }}
+        with:
+          name: CoverageReport
+          path: coverage_html/
