--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,3 +22,9 @@ jobs:
     uses: ./.github/workflows/reusable-test.yml
     with:
       coverage-report: true
+    steps:
+      - uses: actions/upload-artifact@v2
+        if: ${{ inputs.coverage-report }}
+        with:
+          name: CoverageReport
+          path: coverage_html/
