--- a/.github/workflows/reusable-static.yml
+++ b/.github/workflows/reusable-static.yml
@@ -4,14 +4,7 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref == 'refs/heads/main' && github.run_number || github.ref }}
-  cancel-in-progress: true  # cancel jobs from previous push
+  workflow_call:
 
 jobs:
   formatting:
