Add better description for tox -e config-build

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ changedir = requirements
 commands = pip-compile-multi -d .
 
 [testenv:config-build]
-description = Build new default configuration yaml file
+description = Build new static default configuration yaml file of BeamlimeSystem and export it into the generated resource directory
 changedir = src/beamlime/resources
 allowlist_externals = python
 commands =
