--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -31,19 +31,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
         with:
-          submodules: true
-      - name: Setup conda environment
-        uses: mamba-org/provision-with-micromamba@main
-        with:
-          micromamba-version: 1.0.0
-          environment-file: docs/environments/conda/${{ inputs.build-config }}.yaml
-          cache-env: true
-          extra-specs: |
-            python=${{ inputs.python-version }}
-
+          python-version: ${{ inputs.python-version }}
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install -r requirements/ci.txt
       - run: tox -e test
-
       - uses: actions/upload-artifact@v3
         if: ${{ inputs.coverage-report }}
         with:
