--- a/src/beamlime/resources/templates/config.yaml
+++ b/src/beamlime/resources/templates/config.yaml
@@ -12,9 +12,7 @@ general:
   name:
   last-updated:
   log-dir: # ~/.beamlime/log
-
-dashboard:
-  update-frequency: 5 # [Hz]
+  max-paused: beamlime.config.preset_options.MAX_PAUSED  # 5 s
 
 data-stream:
   custom-handler-dir: # ~/.beamlime/custom-handler
@@ -35,7 +33,6 @@ data-stream:
     #  ...
     # applicatoin-name-2:
     #  ...
-
 
 data-reduction: # Each workflow will be run asynchronously but in one process.
                 # Can be split into multi-processes by the data-reduction-manager instance if needed.
