--- a/src/beamlime/resources/templates/config.yaml
+++ b/src/beamlime/resources/templates/config.yaml
@@ -3,7 +3,6 @@
 # @author Sunyoung Yoo
 #
 # Dependencies on other templates: data-stream-application.yaml,
-#                                  data-stream-mapping.yaml,
 #                                  workflow.yaml
 #                                  target.yaml
 
@@ -12,27 +11,42 @@ general:
   name:
   last-updated:
   log-dir: # ~/.beamlime/log
-  max-paused: beamlime.config.preset_options.MAX_PAUSED  # 5 s
+  max-paused: beamlime.config.preset_options.DEFAULT_PAUSED  # 60 s
 
 data-stream:
   custom-handler-dir: # ~/.beamlime/custom-handler
-  applications: # Each application will be run in different process if possible.
+  applications:
     # - name: application-name-1
     #   ...
     # - name: application-name-2
     #   ...
     # - name: application-name-3
     #   ...
-  application-mapping: # Define communication between applications here.
-    # - from: application-name-1
-    #   to:
-    #       - application-name-2
-    #       - application-name-3
   application-specs:  # Specs for each applications. It will be passed into the constructor of the handler.
     # application-name-1:
     #  ...
     # applicatoin-name-2:
     #  ...
+  communication-channels: # Each channel will be assigned to each application in the application-subscriptions.
+    # - name: channel-name-1
+    #   type:
+    #   options:
+    # - name: channel-name-2
+    #   type:
+    #   options:
+    # ...
+  application-subscriptions: # Define communication between applications here.
+    # - app-name: application-name-1
+    #   input-channels:
+    #    - channel-name-1
+    #   output-channels:
+    #    - channel-name-2
+    # - app-name: application-name-2
+    #   input-channels:
+    #    ...
+    #   output-channels:
+    #    - channel-name-1
+    # ...
 
 data-reduction: # Each workflow will be run asynchronously but in one process.
                 # Can be split into multi-processes by the data-reduction-manager instance if needed.
