--- a/src/beamlime/resources/templates/application.yaml
+++ b/src/beamlime/resources/templates/application.yaml
@@ -7,5 +7,5 @@ name:
 data-handler:
 instance-number: # How many instances you want to create
 keep-alive: FALSE
-timeout: beamlime.config.preset_options.MAX_PAUSED  # 60 s
-wait-interval: beamlime.config.preset_options.DEFAULT_WAIT_INTERVAL  # 60 s
+timeout: beamlime.config.preset_options.DEFAULT_TIMEOUT  # 60 s
+wait-interval: beamlime.config.preset_options.DEFAULT_WAIT_INTERVAL  # 1 s
