--- a/src/beamlime/resources/templates/config.yaml
+++ b/src/beamlime/resources/templates/config.yaml
@@ -11,7 +11,7 @@ general:
   name:
   last-updated:
   log-dir: # ~/.beamlime/log
-  max-paused: beamlime.config.preset_options.DEFAULT_PAUSED  # 60 s
+  timeout: beamlime.config.preset_options.MAX_TIMEOUT  # 600 s
 
 data-stream:
   custom-handler-dir: # ~/.beamlime/custom-handler
