--- a/src/beamlime/resources/templates/subscription.yaml
+++ b/src/beamlime/resources/templates/subscription.yaml
@@ -2,5 +2,5 @@
 # Copyright (c) 2023 Scipp contributors (https://github.com/scipp)
 
 name: # unique name of the channels defined in the communication-channels
-timeout: beamlime.config.preset_options.MAX_PAUSED  # 60 s
+timeout: beamlime.config.preset_options.DEFAULT_TIMEOUT  # 60 s
 wait-interval: beamlime.config.preset_options.DEFAULT_WAIT_INTERVAL  # 60 s
