--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ description = Build new static default configuration yaml file of BeamlimeSystem
 changedir = src/beamlime/resources
 allowlist_externals = python
 commands =
-    - python -m beamlime.executables.export_default_config --directory {toxinidir}/src/beamlime/resources/generated/ --overwrite
+    - python -m beamlime.executables.export_preset_configs --directory {toxinidir}/src/beamlime/resources/generated/ --overwrite
 
 [testenv:static]
 description = Code formatting and static analysis
